--- a/local.yml
+++ b/local.yml
@@ -1,10 +1,9 @@
- ---
-
+---
 - hosts: localhost
   connection: local
   become: true
  
   tasks:
   - name: install htop
-    pacman:
+    apt:
       name: htop
