--- a/local.yml
+++ b/local.yml
@@ -4,6 +4,12 @@
   become: true
  
   tasks:
-  - name: install htop
+  - name: install packages
     apt:
-      name: htop
+      name:
+        - htop
+        - mc
+        - tmux
+        - net-tools
+        - lsof
+        - unzip
