--- a/local.yml
+++ b/local.yml
@@ -1,15 +1,12 @@
----
 - hosts: localhost
   connection: local
   become: true
- 
+
+  pre_tasks:
+    - name: update repositories
+      apt:
+        update_cache: yes
+      changed_when: False
+
   tasks:
-  - name: install packages
-    apt:
-      name:
-        - htop
-        - mc
-        - tmux
-        - net-tools
-        - lsof
-        - unzip
+    - include: tasks/packages.yml
